Fixed layout break issues on error text

--- a/web/rainmaker/packages/egov-ui-kit/assets/styles/app.scss
+++ b/web/rainmaker/packages/egov-ui-kit/assets/styles/app.scss
@@ -238,7 +238,7 @@ body.employee-user-profile {
 }
 
 .background-white {
-  background: #fff;
+  background: #f2f2f2;
   min-height: calc(100vh - 64px);
 }
 
@@ -260,7 +260,7 @@ body.employee-user-profile {
 }
 
 .title-white-background {
-  background-color: #ffffff !important;
+  background-color: #f2f2f2 !important;
 }
 
 @media only screen and (min-width: 768px) {
